--- a/src/components/SelectedPost/Selectedpost.css
+++ b/src/components/SelectedPost/Selectedpost.css
@@ -1,7 +1,5 @@
 #Post-design{
     width: 100%;
-    height: 200px;
-    margin: 10px;
-    padding: 10px;
-    border:2px solid red;
+   
+    border-bottom:2px solid lightgray;
 }
